<resources>
    <string name="app_name">Run With Me</string>
    <string name="profile_menu">Profile</string>
    <string name="run_menu">Run</string>
    <string name="groups_menu">Groups</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_on_running">OnRunningActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="start_time">00:00:00</string>
    <string name="start_distance">0.00</string>
    <string name="kilometer_unit_distance">Kilometer</string>
    <string name="start_pace_and_duration">00:00</string>
    <string name="current_pace">Current Pace</string>
    <string name="duration">Duration</string>
    <string name="pause">Pause</string>
    <string name="keep_running">Keep Running?</string>
    <string name="continue_running">Continue Running</string>
    <string name="stop_running">Stop Running</string>
    <string name="button_stat">Statistics</string>
    <string name="button_add_friend">Add friend</string>
    <string name="no_runs_stat">No Runs Found Yet.</string>
    <string name="no_friends">No Friends Found Yet.</string>
    <string name="no_groups">No Groups Found Yet.</string>
    <string name="no_future_runs">No Future Runs Found Yet.</string>
    <string name="no_statistics_runs">No Group Runs Statistics Found Yet.</string>
    <string name="no_group_runs">You do not have group runs soon</string>
    <string name="select_group_run_title">Your Group Runs for Today</string>
    <string name="title_run_stat">My Runs Statistics</string>
    <string name="title_my_groups">My Groups</string>
    <string name="title_my_friends">My Friends</string>
    <string name="title_compare_statistics">Compare Statistics</string>
    <string name="title_add_friend">Add Friend</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_create_group">Create New Group</string>
    <string name="group_name_empty_error">You must enter a name for your group</string>
    <string name="group_description_empty_error">You must enter a description for your group</string>
    <string name="email_empty_error">Please insert your email</string>
    <string name="email_invalid_error">Please insert valid email</string>
    <string name="password_empty_error">Please insert your password</string>
    <string name="first_name_empty_error">Please insert your first name</string>
    <string name="last_name_empty_error">Please insert your last name</string>
    <string name="location_empty_error">Please insert the location</string>
    <string name="date_empty_error">Please choose a date</string>
    <string name="time_empty_error">Please pick a time</string>
    <string name="signup_question">"Don't have an account? <font color='#107DAC'>Sign Up</font>"</string>
    <string name="login_question">"Already have an account? <font color='#107DAC'>Login</font>"</string>
    <string name="signup">Sign Up</string>
    <string name="email_exist">This email already exist</string>
    <string name="create_group">Create New Group</string>
    <string name="map_summary">Map summary</string>
    <string name="_0_km_h">0 km/h</string>
    <string name="init_steps">0</string>
    <string name="speed">Speed</string>
    <string name="save">Save</string>
    <string name="delete_summary">Delete Summary</string>
    <string name="start">Start</string>
    <string name="solo_run">Solo</string>
    <string name="group_run">Group</string>
    <string name="date_example">04/09/2021</string>
    <string name="step_icon">Step Icon</string>
    <string name="steps_example">15000</string>
    <string name="time_icon">Time Icon</string>
    <string name="time_example">22:10</string>
    <string name="road_icon">Road Icon</string>
    <string name="distance_example">1.2 KM</string>
    <string name="speed_icon">Speed Icon</string>
    <string name="speed_example">3.6 km/h</string>
    <string name="steps">Steps</string>
    <string name="avg_speed">Avg Speed</string>
    <string name="group_name_example">Group 1</string>
    <string name="friend">Friend</string>
    <string name="friend_name_example">Yosi Levi</string>
    <string name="avg_distance">Avg. Distance</string>
    <string name="avg_steps">Avg. Steps</string>
    <string name="avg_pace">Avg. Pace</string>
    <string name="statistics">Statistics</string>
    <string name="friends">Friends</string>
    <string name="schedule_a_run">Schedule a Run</string>
    <string name="compare_run">Compare</string>
    <string name="group_name">Group Name</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="location_example">Ben Gurion 5, Tel Aviv</string>
    <string name="description">Description</string>
    <string name="ok">OK</string>
    <string name="group_description">Group Description</string>
</resources>