<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profileFragment"
        android:titleCondensed="@string/profile_menu"
        android:icon="@drawable/ic_account_circle"
        android:orderInCategory="1"
        android:title="@string/profile_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/runFragment"
        android:titleCondensed="@string/run_menu"
        android:icon="@drawable/ic_run"
        android:orderInCategory="2"
        android:title="@string/run_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/groupsFragment"
        android:titleCondensed="@string/groups_menu"
        android:icon="@drawable/ic_groups"
        android:orderInCategory="3"
        android:title="@string/groups_menu"
        app:showAsAction="ifRoom" />
</menu>