<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_nav"
    app:startDestination="@id/runFragment">

    <fragment
        android:id="@+id/runFragment"
        android:name="com.runwithme.runwithme.view.run.RunFragment"
        android:label="@string/run_menu"
        tools:layout="@layout/fragment_run" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.runwithme.runwithme.view.profile.ProfileFragment"
        android:label="@string/profile_menu"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/groupsFragment"
        android:name="com.runwithme.runwithme.view.groups.GroupsFragment"
        android:label="@string/groups_menu"
        tools:layout="@layout/fragment_groups" />
</navigation>