<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="result"
            type="com.runwithme.runwithme.model.GroupRun" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/future_run_cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/lightMediumGray"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/white">

                <TextView
                    android:id="@+id/group_run_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/date_example"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/avg_distance_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/avg_distance"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/group_run_date" />

                <ImageView
                    android:id="@+id/avg_distance_imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/road_icon"
                    app:layout_constraintEnd_toEndOf="@+id/avg_distance_title_text_view"
                    app:layout_constraintStart_toStartOf="@+id/avg_distance_title_text_view"
                    app:layout_constraintTop_toBottomOf="@+id/avg_distance_title_text_view"
                    app:srcCompat="@drawable/ic_road" />

                <TextView
                    android:id="@+id/avg_distance_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_distance"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/avg_distance_imageView"
                    app:layout_constraintStart_toStartOf="@+id/avg_distance_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/avg_distance_imageView" />

                <TextView
                    android:id="@+id/avg_steps_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/avg_steps"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/avg_pace_title_text_view"
                    app:layout_constraintStart_toEndOf="@+id/avg_distance_title_text_view"
                    app:layout_constraintTop_toTopOf="@+id/avg_distance_title_text_view" />

                <ImageView
                    android:id="@+id/avg_step_imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/step_icon"
                    app:layout_constraintEnd_toEndOf="@+id/avg_steps_title_text_view"
                    app:layout_constraintStart_toStartOf="@+id/avg_steps_title_text_view"
                    app:layout_constraintTop_toBottomOf="@+id/avg_steps_title_text_view"
                    app:srcCompat="@drawable/ic_run" />

                <TextView
                    android:id="@+id/avg_steps_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/init_steps"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/avg_step_imageView"
                    app:layout_constraintStart_toStartOf="@+id/avg_step_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/avg_step_imageView" />

                <TextView
                    android:id="@+id/avg_pace_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/avg_pace"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/avg_steps_title_text_view"
                    app:layout_constraintTop_toTopOf="@+id/avg_steps_title_text_view" />

                <ImageView
                    android:id="@+id/avg_pace_imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/speed_icon"
                    app:layout_constraintEnd_toEndOf="@+id/avg_pace_title_text_view"
                    app:layout_constraintStart_toStartOf="@+id/avg_pace_title_text_view"
                    app:layout_constraintTop_toBottomOf="@+id/avg_pace_title_text_view"
                    app:srcCompat="@drawable/ic_speed" />

                <TextView
                    android:id="@+id/avg_pace_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_pace_and_duration"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/avg_pace_imageView"
                    app:layout_constraintStart_toStartOf="@+id/avg_pace_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/avg_pace_imageView" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/compare_button"
                    android:layout_width="120dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="141dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="141dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/compare_run"
                    android:textSize="8dp"
                    android:textStyle="bold"
                    app:icon="@drawable/ic_graphic"
                    android:backgroundTint="@color/lightBlue"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/avg_steps_value_text_view" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>